feat: 만개에 1분 소요. 수신자 정보 조회 API 완료

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     // SLF4J API
     implementation 'org.slf4j:slf4j-api:2.0.9'
 
+    // https://mvnrepository.com/artifact/com.opencsv/opencsv
+    implementation 'com.opencsv:opencsv:5.9'
+
+
 }
