CORS -> commonConfig apply

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation 'com.opencsv:opencsv:5.9'
 
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
 }
