--- a/history-service/build.gradle
+++ b/history-service/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     implementation(project(':common')) {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
     }
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
