--- a/message-service/build.gradle
+++ b/message-service/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     implementation (project(':common')){
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-mongodb'
     }
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
