--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation 'com.opencsv:opencsv:5.9'
 
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
 }
