--- a/history-service/build.gradle
+++ b/history-service/build.gradle
@@ -3,4 +3,8 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
     }
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Metrics 관련 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
