--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -1,10 +1,10 @@
 name: RCS Application CI/CD II
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  #push:
+  #  branches: [ main ]
+  #pull_request:
+  #  branches: [ main ]
   workflow_dispatch:
     inputs:
       USERID:
