--- a/deployment/deploy.yaml.template
+++ b/deployment/deploy.yaml.template
@@ -232,10 +232,6 @@ spec:
       labels:
         app: history-service
         userid: ${userid}
-      annotations:
-                prometheus.io/scrape: "true"
-                prometheus.io/path: "/actuator/prometheus"
-                prometheus.io/port: "**8080**"
     spec:
       containers:
       - name: history-service
@@ -293,6 +289,10 @@ kind: Service
 metadata:
   name: ${userid}-rcs-history
   namespace: ${app_namespace}
+  annotations:
+                  prometheus.io/scrape: "true"
+                  prometheus.io/path: "/actuator/prometheus"
+                  prometheus.io/port: "8083"
 spec:
   selector:
     app: history-service
