--- a/message-service/build.gradle
+++ b/message-service/build.gradle
@@ -3,4 +3,8 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-mongodb'
     }
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Metrics
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
