--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -47,3 +47,18 @@ azure:
     consumer-group:
       message: message-consumer-group
       history: history-consumer-group
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus,metrics
+  metrics:
+    tags:
+      app: ${spring.application.name}
+      instance: ${HOSTNAME:localhost}:${server.port}
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      slo:
+        http.server.requests: 50ms,100ms,200ms,500ms,1s
