--- a/deployment/deploy.yaml.template
+++ b/deployment/deploy.yaml.template
@@ -80,6 +80,10 @@ spec:
       - name: auth-service
         image: ${auth_image_path}
         imagePullPolicy: Always
+        volumeMounts:
+         - name: timezone
+           mountPath: /etc/localtime
+           readOnly: true
         env:
         - name: JAVA_OPTS
           valueFrom:
@@ -124,6 +128,11 @@ spec:
           limits:
             cpu: 500m
             memory: 1024Mi
+      volumes:
+          - name: timezone
+            hostPath:
+            path: /usr/share/zoneinfo/Asia/Seoul
+            type: File
 
 ---
 # Auth Service
