--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -1,38 +1,47 @@
+# 워크플로우 기본 정보
 name: RCS Application CI/CD II
 
+# 워크플로우 트리거 조건
 on:
+  # main 브랜치에 push될 때 실행
   push:
     branches: [ main ]
-  #pull_request:
-  #  branches: [ main ]
+  # UI에서 수동으로 워크플로우 실행 가능
   workflow_dispatch:
     inputs:
+      # 사용자 ID 입력 받음 (리소스 이름에 사용)
       USERID:
         description: 'User ID for resource naming (lowercase letters and numbers only)'
         required: true
         default: 'dg4us'
         type: string
 
+# 환경 변수 설정
 env:
   RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
   LOCATION: ${{ vars.LOCATION }}
   USERID: ${{ github.event.inputs.USERID || 'dg4us' }}
 
-
+# 실행할 작업들
 jobs:
+  # 빌드 작업
   build:
     runs-on: ubuntu-latest
     outputs:
+      # 이미지 태그를 다른 job에서 사용할 수 있도록 output으로 저장
       image_tag: ${{ steps.set_tag.outputs.image_tag }}
     
     steps:
+      # 소스코드 체크아웃
       - uses: actions/checkout@v4
       
+      # 이미지 태그 생성 (현재 시간 기준)
       - name: Set image tag
         id: set_tag
         run: |
           echo "image_tag=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
 
+      # JDK 17 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -40,6 +49,7 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      # Gradle로 각 서비스 빌드
       - name: Build Applications
         run: |
           chmod +x gradlew
@@ -49,6 +59,7 @@ jobs:
           ./gradlew basedata-service:clean basedata:build -x test
           ./gradlew gateway-service:clean gateway:build -x test
 
+      # 빌드 결과물 확인
       - name: Check build outputs
         run: |
           for service in auth message history basedata gateway; do
@@ -56,6 +67,7 @@ jobs:
             ls -la ${service}-service/build/libs/
           done
 
+      # 빌드 결과물을 아티팩트로 저장
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -65,6 +77,7 @@ jobs:
             deployment/
             Dockerfile-*
 
+  # 도커 이미지 빌드 및 푸시 작업
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -72,18 +85,22 @@ jobs:
       image_tag: ${{ needs.build.outputs.image_tag }}
     
     steps:
+      # 빌드 아티팩트 다운로드
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: build-artifacts
           path: .
 
+      # 다운로드된 파일 구조 확인
       - name: Display structure of downloaded files
         run: ls -R
 
+      # Docker Buildx 설정
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Azure Container Registry 로그인
       - name: Login to Azure Container Registry
         uses: azure/docker-login@v1
         with:
@@ -91,6 +108,7 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
+      # 각 서비스별 도커 이미지 빌드 및 푸시
       - name: Build and Push Container Images
         env:
           IMAGE_REG: ${{ env.USERID }}cr.azurecr.io
@@ -101,62 +119,70 @@ jobs:
           do
             echo "Building ${service} service image..."
             
-            # Create Dockerfile content
+            # Dockerfile 생성
             echo "FROM eclipse-temurin:17-jdk-alpine" > "Dockerfile.${service}"
             echo "COPY ${service}-service/build/libs/${service}-service-*.jar app.jar" >> "Dockerfile.${service}"
             echo 'ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar /app.jar"]' >> "Dockerfile.${service}"
                         
-            # Build Docker image
+            # 도커 이미지 빌드 
             docker build -f "Dockerfile.${service}" \
               -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}" \
               -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest" .
             
-            # Push Docker images
+            # 도커 이미지 푸시
             docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}"
             docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest"
           done
 
+  # 쿠버네티스 배포 작업
   deploy:
     needs: [build, release]
     runs-on: ubuntu-latest
     environment: production
     
     steps:
+      # 배포에 필요한 파일들 다운로드
       - uses: actions/download-artifact@v3
         with:
           name: build-artifacts
           path: .
 
+      # Azure 로그인
       - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # Kubelogin 설정
       - name: Set up kubelogin
         uses: azure/use-kubelogin@v1
         with:
           kubelogin-version: 'v0.0.25'
 
+      # AKS 클러스터 접근 설정
       - name: Get AKS Credentials
         uses: azure/aks-set-context@v3
         with:
           resource-group: ${{ env.RESOURCE_GROUP }}
           cluster-name: ${{ env.USERID }}-aks
 
+      # 네임스페이스 및 시크릿 생성
       - name: Create Namespaces and Secrets
         env:
           DB_NAMESPACE: rcs-mvp
           APP_NAMESPACE: rcs-mvp
         run: |
-          # Az CLI로 AKS 자격증명 갱신
+          # AKS 자격증명 갱신
           az aks get-credentials \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name ${{ env.USERID }}-aks \
             --overwrite-existing
             
+          # 네임스페이스 생성
           kubectl create namespace ${DB_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           kubectl create namespace ${APP_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           
+          # JVM 옵션 설정을 위한 ConfigMap 생성
           kubectl create configmap jvm-settings \
            --namespace ${APP_NAMESPACE} \
            --from-literal=AUTH_JAVA_OPTS="-Xms512m -Xmx1024m" \
@@ -165,6 +191,7 @@ jobs:
            --from-literal=BASEDATA_JAVA_OPTS="-Xms256m -Xmx512m" \
            --dry-run=client -o yaml | kubectl apply -f -
           
+          # DB 접속 정보 시크릿 생성
           kubectl create secret generic 'dg4us-db-credentials' \
             --namespace ${APP_NAMESPACE} \
             --from-literal=AUTH_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
@@ -173,6 +200,7 @@ jobs:
             --from-literal=MESSAGE_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
             --dry-run=client -o yaml | kubectl apply -f -
 
+      # 배포 매니페스트 생성 및 적용
       - name: Generate and Apply Deployment
         env:
           IMAGE_TAG: ${{ needs.build.outputs.image_tag }}
@@ -182,7 +210,7 @@ jobs:
           APP_NAMESPACE: rcs-mvp
           USERID: ${{ env.USERID }}
         run: |
-          # Set variables for envsubst
+          # 환경 변수 설정
           export auth_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-auth:${IMAGE_TAG}"
           export message_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-message:${IMAGE_TAG}"
           export history_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-history:${IMAGE_TAG}"
@@ -191,31 +219,35 @@ jobs:
           export userid="${USERID}"
           export app_namespace="${APP_NAMESPACE}"
           
-          # Generate manifest
+          # 배포 매니페스트 생성
           envsubst < deployment/deploy.yaml.template > deployment/deploy.yaml
           
-          # Display for verification
+          # 생성된 매니페스트 확인
           echo "Generated deployment manifest:"
           cat deployment/deploy.yaml
           
-          # Apply manifest
+          # 매니페스트 적용
           kubectl apply -f deployment/deploy.yaml
 
+      # 배포 검증
       - name: Verify Deployment
         env:
           APP_NAMESPACE: rcs-mvp
         run: |
+          # 각 서비스별 배포 상태 확인
           for service in auth message history basedata gateway; do
             echo "Waiting for ${service} service..."
             kubectl wait --for=condition=ready pod \
               -l "app=${service}-service,userid=${{ env.USERID }}" \
               -n ${APP_NAMESPACE} --timeout=600s || true
               
+            # 서비스 IP 확인
             IP=$(kubectl get svc ${{ env.USERID }}-rcs-${service} \
               -n ${APP_NAMESPACE} \
               -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
             echo "${service} Service IP: ${IP}"
             
+            # IP 할당 확인
             if [ -z "${IP}" ]; then
               echo "Error: ${service} service IP not available"
               exit 1
